# Spicy-scripts

./: Clusters - OpenStack Dashboard-2.html  decorators_sample  dijkstra.py  graph.py  graph20.py  heapsort.py  inside.cpp  mergeSort.py  oop_task2.cpp  plans.txt  points.txt  prime.py  queue.py  quicksort.py  ref.tex  resourse-check.rst  stack.py  task12-04.hs  task22  task24.pro  task25-7.pro  task28-02.rb  task28-2.rb  task29-5.rb  task29-math.rb  topolog_sort.py  w_graph.py
bash/yandex-wall-paper/: every-day-wallpaper.sh  readme.md
bazel/go_hello_world/: README.md
ip-tables/: examples.sh
python/algorithms/: Floid.py  Kruskal.py  graph20.py  topolog_sort.py  w_grap4h.py
python/test_tasks/proxy-server-tm/: proxy-server-tm.py
swift/cmake-swift-testing/: CMakeLists.txt  README.md  test.swift  test2.swift  test3.mm  test4.cc
